# kbt

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/aur/: .SRCINFO.template  PKGBUILD.template  publish.sh
.github/workflows/: aur.yaml  brew.yaml  ci.yaml  crates.yaml
scripts/: increment-version.sh  release.sh
src/: backend.rs  generic_backend.rs  key.rs  keyboard.rs  keyboard100.rs  keyboard60.rs  keyboard80.rs  linux.rs  main.rs  menu.rs  model.rs  view.rs
