[package]
name = "kbt"
version = "0.3.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x11rb = "0.11.1"
ratatui = { version = "0.22.0", features = ["all-widgets"]}
crossterm = "0.25"
clap = { version = "4.3.19", features = ["derive"] }
