[package]
name = "kbt"
version = "2.0.3"
authors = ["bloznelis <lukas.bloznelis@gmail.com>"]
description = "Keyboard tester in terminal"
license = "MIT"
homepage = "https://github.com/bloznelis/kbt"
repository = "https://github.com/bloznelis/kbt"
edition = "2021"
keywords = ["terminal", "keyboard", "tester", "tui"]
readme = "README.md"

[dependencies]
device_query_revamped = "2.2.0"
ratatui = { version = "0.24.0", features = ["all-widgets"]}
crossterm = "0.27"
clap = { version = "4.4.7", features = ["derive"] }
simple-logging = "2.0.2"
log = "0.4.20"
